--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,3 +23,22 @@ body {
 .bg-secondary-gray {
   background: #1e293b;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* nền track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #14b3ea; /* màu thanh cuộn */
+  border-radius: 8px;
+  transition: background-color 0.2s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #1099ca; /* hover */
+}
