--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,6 +24,18 @@ body {
   background: #1e293b;
 }
 
+.primary-card {
+  background: #0f172a;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.secondary-card {
+  background: #1e293b;
+  border-radius: 10px;
+  padding: 20px;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
